--- a/style.css
+++ b/style.css
@@ -1188,8 +1188,8 @@ body {
 }
 
 .location-map img {
-    width: 644px;
-    height: 344px;
+    width: 100%;
+    height: 470px;
     object-fit: contain;
     display: block;
 }
