--- a/style.css
+++ b/style.css
@@ -1729,6 +1729,7 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 248px;
     align-items: start;
+    margin-bottom: 100px;
 }
 /* Titles */
 .building-title,
@@ -1739,6 +1740,7 @@ body {
     line-height: 55px;
     letter-spacing: 0;
     text-transform: uppercase;
+    margin-bottom: 33px;
 }
 /* Text body */
 .building-text {
@@ -1749,6 +1751,7 @@ body {
     letter-spacing: 0;
     max-width: 620px;
     margin: 12px 0 22px 0;
+
 }
 .building-text .text-bold {
     font-weight: 600;
@@ -1774,14 +1777,14 @@ body {
 .building-image img { width: 100%; height: 477px; }
 
 /* Unit types */
-.unit-list { display: flex; flex-direction: column; gap: 18px; }
-.unit-item { display: flex; flex-direction: column; align-items: center; gap: 8px; }
-.unit-name { font-family: 'Manrope', sans-serif; font-weight: 400; font-size: 32px; line-height: 100%; letter-spacing: 0; text-align: center; text-transform: uppercase; }
-.unit-range { font-family: 'Manrope', sans-serif; font-weight: 400; font-size: 16px; line-height: 119%; letter-spacing: 0; text-align: center; }
+.unit-list { display: flex; flex-direction: column; gap: 22px; max-width: 560px; }
+.unit-item { display: flex; flex-direction: column; align-items: flex-start; gap: 8px; }
+.unit-name { font-family: 'Manrope', sans-serif; font-weight: 400; font-size: 32px; line-height: 100%; letter-spacing: 0; text-align: left; text-transform: uppercase; margin-bottom: 8px; margin-top: 26px }
+.unit-range { font-family: 'Manrope', sans-serif; font-weight: 400; font-size: 16px; line-height: 119%; letter-spacing: 0; text-align: left; margin-bottom: 26px; }
 .unit-price { font-family: 'Manrope', sans-serif; font-weight: 600; font-size: 16px; line-height: 119%; letter-spacing: 0; }
-.unit-divider { height: 1px; background: rgba(0,0,0,.08); margin: 2px 0; }
+.unit-divider { height: 1px; background: rgba(0,0,0,.12); margin: 10px 0 0 0; width: 100%; }
 
-.handover { margin: 24px 0 24px 0; text-align: center; }
+.handover { margin: 60px 0 24px 0; text-align: left; }
 .handover-label { font-family: 'Manrope', sans-serif; font-weight: 400; font-size: 32px; line-height: 100%; text-transform: uppercase; }
 .handover-value { font-family: 'Manrope', sans-serif; font-weight: 600; font-size: 32px; line-height: 100%; text-transform: uppercase; }
 
