--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     background-color: #fff;
-    padding: 40px 60px;
+    padding: 40px 0 40px;
     position: relative;
     grid-column: 1 / -1;
 }
@@ -323,7 +323,6 @@ body {
     align-items: center;
     text-align: center;
     flex: 1;
-    padding: 0 20px;
 }
 
 .info-label {
@@ -1155,6 +1154,7 @@ body {
     list-style: none;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 28px;
     height: 100%;
     margin: 0;
@@ -1176,14 +1176,14 @@ body {
 
 .location-time {
     font-family: 'Manrope', sans-serif;
-    font-size: 16px;
-    font-weight: 700;
+    font-size: 24px;
+    font-weight: 600;
     color: #000;
 }
 
 .location-name {
-    font-family: 'Manrope', sans-serif;
-    font-size: 14px;
+    font-family: 'AWConquerorStdDidot', sans-serif;
+    font-size: 18px;
     font-weight: 400;
     color: #000;
 }
@@ -1191,7 +1191,7 @@ body {
 .location-map img {
     width: 100%;
     height: 470px;
-    object-fit: contain;
+    object-fit: cover;
     display: block;
 }
 
@@ -1314,8 +1314,8 @@ body {
 	.info-divider { display: none; }
 	.info-label { font-size: 10px; letter-spacing: 0.8px; margin-bottom: 6px; }
 	.info-main { font-size: 14px; font-weight: 400; }
-    .info-section:first-of-type .info-main { display: none; }
-	.info-sub { font-size: 13px; }
+    /* .info-section:first-of-type .info-main { display: none; } */
+	.info-sub { font-size: 13px; display: none; }
 
 	/* Section 2 */
 	.section-2 { height: auto; margin-bottom: 16px; }
@@ -1619,6 +1619,7 @@ body {
     line-height: 150%;
     color: #000;
     opacity: 0.8;
+    padding: 0 115px;
 }
 .future-text-bold {
     font-weight: 700;
@@ -1629,8 +1630,8 @@ body {
 .future-stats { display: flex; justify-content: space-between; align-items: center; max-width: 1280px; margin: 10px auto 0 auto; text-align: center; gap: 0; }
 .future-stat { display: flex; flex-direction: column; align-items: center; gap: 6px; flex: 1; }
 .future-stats .info-divider { width: 1px; height: 60px; background-color: #3F3F3F; opacity: 0.8; margin: 0 20px; }
-.future-stat .num { font-family: 'Manrope', sans-serif; font-size: 32px; font-weight: 700; color: #000; }
-.future-stat .label { font-family: 'Manrope', sans-serif; font-size: 16px; font-weight: 500; color: #000; opacity: 0.8; text-transform: uppercase; }
+.future-stat .num { font-family: 'Manrope', sans-serif; font-size: 28px; font-weight: 600; color: #000; }
+.future-stat .label { font-family: 'Manrope', sans-serif; font-size: 14px; font-weight: 400; color: #000; opacity: 0.8; text-transform: uppercase; }
 
 @media (max-width: 768px) {
     .section-future { padding: 0 0 36px 0; }
@@ -1767,6 +1768,7 @@ body {
     letter-spacing: 0;
     max-width: 620px;
     margin: 12px 0 22px 0;
+    padding: 0 20px 0 0;
 
 }
 .building-text .text-bold {
@@ -1790,15 +1792,15 @@ body {
     text-align: center;
     margin-top: auto;
 }
-.building-image img { width: 100%; height: 477px; }
+.building-image img { width: 457px; height: 283px; }
 
 /* Unit types */
-.unit-list { display: flex; flex-direction: column; gap: 22px; max-width: 560px; }
+.unit-list { display: flex; flex-direction: column; max-width: 560px; }
 .unit-item { display: flex; flex-direction: column; align-items: flex-start; gap: 8px; }
 .unit-name { font-family: 'Manrope', sans-serif; font-weight: 400; font-size: 32px; line-height: 100%; letter-spacing: 0; text-align: left; text-transform: uppercase; margin-bottom: 8px; margin-top: 26px }
 .unit-range { font-family: 'Manrope', sans-serif; font-weight: 400; font-size: 16px; line-height: 119%; letter-spacing: 0; text-align: left; margin-bottom: 26px; }
 .unit-price { font-family: 'Manrope', sans-serif; font-weight: 600; font-size: 16px; line-height: 119%; letter-spacing: 0; }
-.unit-divider { height: 1px; background: rgba(0,0,0,.12); margin: 10px 0 0 0; width: 100%; }
+.unit-divider { height: 1px; background: rgba(0,0,0,.6); margin: 10px 0 0 0; width: 100%; }
 
 .handover { margin: 60px 0 24px 0; text-align: left; }
 .handover-label { font-family: 'Manrope', sans-serif; font-weight: 400; font-size: 32px; line-height: 100%; text-transform: uppercase; }
